Simple API call for Layout/Media tagging. xibosignage/xibo#779
